<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingTop="10dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical" >

        <TextView
            android:id="@+id/target_telephone_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/set_telephone"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/target_telephone_et"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/target_telephone_tv"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="phone" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/time_interval_explain_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/target_telephone_et"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/set_time_interval"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:id="@+id/time_interval_lin_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/time_interval_explain_tv"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/time_interval_hours_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:fontFamily="sans-serif"
                android:text="@string/set_time_interval_hours"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/time_interval_hours_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:ems="10"
                android:gravity="right"
                android:inputType="number" />

            <TextView
                android:id="@+id/time_interval_minutes_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:fontFamily="sans-serif"
                android:text="@string/set_time_interval_minutes"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/time_interval_minutes_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:ems="10"
                android:gravity="right"
                android:inputType="number" />
        </LinearLayout>

        <TextView
            android:id="@+id/id_explain_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/time_interval_lin_layout"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/set_id"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/id_et"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/id_explain_tv"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="text"
            android:maxLength="100" />

        <LinearLayout
            android:id="@+id/button_lin_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/id_et"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="17dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/close_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight=".5"
                android:background="@drawable/bordered_button"
                android:fontFamily="sans-serif"
                android:text="@string/settings_close" />

            <Button
                android:id="@+id/done_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight=".5"
                android:background="@drawable/bordered_button"
                android:fontFamily="sans-serif"
                android:text="@string/settings_done" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>